Changed to static imports